# stocker

./: .gitignore  AGENTS.md  CLAUDE.md  deploy.sh  start-analyzer.sh  start-api.sh  start-ingest.sh
apps/admin-web/: .env.example  package-lock.json  package.json
apps/analyzer/: .gitignore  pyproject.toml
apps/analyzer/analyzer/: batch.py  database.py  embedding.py  llm.py  main.py  models.py
apps/api/: .dockerignore  .gitignore  build.gradle
apps/ingest/: build.gradle
apps/news-analyzer/: .dockerignore  .env.example  config.py  database.py  main.py  models.py  pyproject.toml
apps/stocker-mobile/: .env  App.tsx  app.config.ts  app.json  package-lock.json  package.json
docs/: API_SPEC.md  ARCHITECT.md  CODER.md  CODING_DECISIONS.md  CODING_RULE.md  MEMORY.md  PROJECT.md  PROJECT_CONTEXT.md  REVIEWER.md  UI_SPEC.md  WORK.md
docs/WORKS/: 20260130_001.md  20260130_002.md  20260130_003.md  20260130_004.md  20260131_001.md  20260131_002.md  20260131_003.md  20260131_004.md  20260131_005.md  20260131_006.md  20260131_007.md  20260131_008.md  20260131_009.md  20260131_010.md  20260131_011.md  20260131_012.md  20260131_013.md  20260131_014.md  20260201_001.md  20260201_002.md  20260201_003.md  20260201_004.md  20260201_005.md  20260201_006.md  20260201_007.md  20260201_009.md  20260201_010.md  20260201_011.md  20260201_012.md  20260201_013.md  20260203_001_manual_mapping_api.md  20260203_002_extraction_filter.md  20260204_001_remove_rawtext_limit.md  20260205_001_expo_mobile_initial_setup.md  20260205_002_headline_api.md  20260210_001_news_extraction_redesign.md  (+20 more)
(+395 files in other folders)
