[project]
name = "analyzer"
version = "0.1.0"
description = "Stocker Analyzer"
authors = [
    {name = "hanzi"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
